Add logo file to imgs folder and create header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="./imgs/logo.png" width="80">
+            <div class="navitems">
+                <p>Resume</p>
+                <button>Say Hello</button>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
