change resume to a link

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <img src="./imgs/logo.png" width="80">
             <div class="navitems">
-                <p>Resume</p>
-                <button>Say Hello</button>
+                <a href="#"> Resume </a>
+                <button> Say Hello </button>
             </div>
         </nav>
     </header>
