Style resume link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <img src="./imgs/logo.png" width="80">
             <div class="navitems">
-                <a href="#"> Resume </a>
+                <a href="#" class="navlink"> Resume </a>
                 <button> Say Hello </button>
             </div>
         </nav>
