--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="./imgs/logo.png" width="80">
             <div class="navitems">
                 <a href="#" class="navlink"> Resume </a>
-                <button> Say Hello </button>
+                <button class="hello-btn"> Say Hello </button>
             </div>
         </nav>
     </header>
