Update resume link and button link

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <img src="./imgs/logo.png" width="80">
             <div class="navitems">
-                <a href="#" class="navlink"> Resume </a>
-                <button class="hello-btn"> Say Hello </button>
+                <a href="https://tyreldev.github.io/html-my-resume-project-1/" class="navlink"> Resume </a>
+                <button class="hello-btn" onclick="location.href='https://www.linkedin.com/in/tyrel-coward-8a8388225/'"> Say Hello </button>
             </div>
         </nav>
     </header>
