Edit header style and intro

--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="container">
+            <article class="intro">
+                <h1> Web Developer</h1>
+                <p>I create and design websites, and I love what I do!</p>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
