Add my picture and style it

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <article class="intro">
                 <h1> Web Developer</h1>
                 <p>I create and design websites, and I love what I do!</p>
+                <img src="./imgs/me.jpg" alt="Tyrel Coward" id="tyrel" width="350">
             </article>
         </section>
     </main>
