Create terminal skeleton and style it.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
                 <img src="./imgs/me.jpg" alt="Tyrel Coward" id="tyrel" width="350">
             </article>
         </section>
+        <section class="hero-container">
+			<article class="hero">
+				<div class="screen">
+					<div class="bar">
+						<div class="btns">
+							<div class="btn" style="background-color:#fc4e58;"></div>
+							<div class="btn" style="background-color:#38ec45;"></div>
+							<div class="btn" style="background-color:#fec530;"></div>
+						</div>
+					</div>
+					<ul class="screen-bar">
+						<li>File</li>
+						<li>Edit</li>
+						<li>View</li>
+						<li>Search</li>
+						<li>Terminal</li>
+						<li>Help</li>
+					</ul>
+					<p><span style="color:#068FFF;">#</span>cd Tyrel/Personal/Website</p>
+					<p><span style="color:#068FFF;">#</span>cat index.html</p>
+					<br>
+				</div>
+			</article>
+		</section>
     </main>
 </body>
 </html>
