Add about section and style it

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tyrel Coward - Personal Website</title>
+    <title>Tyrel's - Personal Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -46,6 +46,12 @@
 					<p><span style="color:#068FFF;">#</span>cat index.html</p>
 					<br>
 				</div>
+			</article>
+		</section>
+        <section class="about-container">
+			<article class="about-info">
+				<h1>Hello, I'm Tyrel. Nice to meet you.</h1>
+				<p>I'm a Web Developer currently living in Barbados. I'm a small start up Founder  (Lickrish Bar) and a Car Enthusiast.</p>
 			</article>
 		</section>
     </main>
