Add skill section and style it

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
 				<p>I'm a Web Developer currently living in Barbados. I'm a small start up Founder  (Lickrish Bar) and a Car Enthusiast.</p>
 			</article>
 		</section>
+        <section class="skills-container">
+			<article class="skills">
+				<section>
+					<div class="icons"><i class="fa-solid fa-code"></i></div>
+					<h2 class="skill-head"> Web Developer </h2>
+					<p class="skill-info">Starting from a blank canvas and painting your dream website.</p>
+					<p class="skill-mhead">Coding Languages</p>
+					<ul>
+						<li>HTML</li>
+						<li>CSS</li>
+						<li>JS</li>
+					</ul>
+				</section>
+			</article>
+		</section>
     </main>
 </body>
 </html>
