Add more sections to skill area

--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
 					</ul>
 				</section>
 			</article>
+            <article class="skills">
+				<section>
+					<div class="icons"><i class="fa-solid fa-code"></i></div>
+					<h2 class="skill-head"> Data Entry </h2>
+					<p class="skill-info">Efficiently manage a large amount of information</p>
+					<p class="skill-mhead">Programs</p>
+					<ul>
+						<li>Microsoft Excel</li>
+						<li>Microsoft Word</li>
+					</ul>
+				</section>
+			</article>
+            <article class="skills">
+				<section>
+					<div class="icons"><i class="fa-solid fa-code"></i></div>
+					<h2 class="skill-head"> Graphics Design </h2>
+					<p class="skill-info">Creating smooth and elegant visual concepts</p>
+					<p class="skill-mhead">Software / Programs</p>
+					<ul>
+						<li>Photoshop</li>
+						<li>Canva</li>
+					</ul>
+				</section>
+			</article>
 		</section>
     </main>
 </body>
