--- a/index.html
+++ b/index.html
@@ -94,5 +94,16 @@
 			</article>
 		</section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/tyrel-coward-8a8388225/"> LinkedIn </a></li>
+                <li><a href="https://twitter.com/TyrelDev"> Twitter </a></li>
+                <li><a href="mailto:tyreldev@proton.me"> Email </a></li>
+                <li><a href="https://github.com/TyrelDev"> GitHub </a></li>
+            </ul>
+            <p>Created by Tyrel © 2023-2024</p>
+        </div>
+    </footer>
 </body>
 </html>
